# llamacpp-minimal-example

./: CMakeLists.txt  README.md
models/: README.md  Supertinyllama-107K-F16.gguf
src/: main.cpp
